@@ -13,6 +13,7 @@ Bugfixes:
  - SDL: Fix axes being mapped wrong
  - Qt: Fix initial state of key mapping
  - Shaders: Fix AGS-001 shader with some bad drivers
+ - GBA Memory: Fix mirror on non-overdumped Classic NES games
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
